<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/background"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main">

    <TextView
        android:id="@+id/text_view1"
        android:text="@string/text"
        android:textColor="#ffcd8239"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="30dp"
        android:paddingBottom="30dp" />

    <Spinner
        android:id="@+id/file_spinner1"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:text="@string/file"
        android:gravity="center"
        android:background="@drawable/spinner_border"
        android:textColor="@color/my_spinner_text_color"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@id/text_view1" />

    <Spinner
        android:id="@+id/edit_spinner1"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:text="@string/edit"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/my_spinner_text_color"
        android:background="@drawable/spinner_border"
        android:layout_below="@id/text_view1"
        android:layout_toRightOf="@id/file_spinner1"/>

    <Spinner
        android:id="@+id/format_spinner1"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:text="@string/format"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/my_spinner_text_color"
        android:background="@drawable/spinner_border"
        android:layout_below="@id/text_view1"
        android:layout_toRightOf="@id/edit_spinner1"/>

    <Spinner
        android:id="@+id/tools_spinner1"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:text="@string/tools"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/my_spinner_text_color"
        android:background="@drawable/spinner_border"
        android:layout_below="@id/text_view1"
        android:layout_toRightOf="@id/format_spinner1"/>

    <EditText
        android:id="@+id/edit_view1"
        android:text="@string/edit_text"
        android:textColor="#ff0000ff"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_below="@id/file_spinner1"
        android:layout_marginTop="18dp"
        android:background="@drawable/border"
        android:gravity="top"
        android:padding="10dp"/>

</RelativeLayout>
