<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/fbtextview"
        android:text="@string/fbtextview"
        android:textSize="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="95dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/heading"
        android:textStyle="bold|italic"/>

    <ListView
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:text="@string/filebrowser"
        android:textColor="@color/my_spinner_text_color"
        android:padding="10dp"
        android:layout_below="@id/fbtextview"
        android:divider="#FF00FF"
        android:dividerHeight="1dp"
        android:listSelector="#FFFF99"
        android:background="#FFCCFF"
        android:layout_margin="10dp"
    />


    <Button
        android:id="@+id/select"
        android:layout_height="50dp"
        android:layout_width="150dp"
        android:text="@string/selectbtn"
        android:layout_below="@id/listview"
        android:textSize="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        />

    <Button
        android:id="@+id/cancel"
        android:layout_height="50dp"
        android:layout_width="150dp"
        android:text="@string/cancelbtn"
        android:layout_below="@id/listview"
        android:layout_alignParentRight="true"
        android:textSize="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        />

</RelativeLayout>